# taskiq-learning

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: arc.drawio
examples/: two.py
src/: __init__.py  api.py  server.py  tasks.py
src/controllers/: __init__.py  currency.py
src/core/: __init__.py  base.py  settings.py
src/db/: __init__.py  db.py
src/db/models/: __init__.py  currency.py
src/db/repositories/: __init__.py  currency.py
src/routes/: __init__.py  currency.py
src/schemas/: __init__.py  awesomeapi.py  currency.py
src/services/: __init__.py  awesomeapi.py
